# alcorhack

./: CMakeLists.txt  README.md  commands.txt  main.cpp  scsi_kernel_patch.patch
sg3/: sg_pt_linux.c
